# TAT-ROS-CoppeliaSim

./: README.md  license.txt  run_coppeliaSim.sh  run_ping.sh
ping-ros-cpp/: CMakeLists.txt  Dockerfile  package.xml
ping-ros-cpp/launch/: ping_ros_cpp_node.launch
ping-ros-cpp/src/: main.cpp
pong-coppeliaSim/: pong.lua
